src/components/header/Header.css
@import url("https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap");

svg {
  font-family: "Josefin Slab", sans-serif;
  width: 100%;
  height: 100%;
}
svg text {
  animation: stroke 8s infinite alternate;
  stroke-width: 2;
  stroke: #9a031e;
  font-size: 1.25rem;
}
@keyframes stroke {
  0% {
    fill: rgba(204, 158, 72, 0);
    stroke: #9a031e;
    stroke-dashoffset: 25%;
    stroke-dasharray: 0 50%;
    stroke-width: 2;
  }
  70% {
    fill: rgba(72, 138, 204, 0);
    stroke: #9a031fad;
  }
  80% {
    fill: rgba(72, 138, 204, 0);
    stroke: #9a031f79;
    stroke-width: 3;
  }
  100% {
    fill: #9a031e;
    stroke: rgba(54, 95, 160, 0);
    stroke-dashoffset: -25%;
    stroke-dasharray: 50% 0;
    stroke-width: 0;
  }
}

.wrapper {
  display: flex;
  align-self: stretch;
}

@media screen and (min-width: 768px) {
  svg text {
    font-size: 1.6rem;
  }
}

@media screen and (min-width: 992px) {
  svg text {
    font-size: 2.25rem;
  }
}

@media screen and (min-width: 1280px) {
  svg text {
    font-size: 3rem;
  }
}

